[tool.poetry]
name = "pydll78"
version = "0.1.2"
description = "python常用小工具包"
authors = ["Frieda.Hu <www778878net@189.cn>"]
packages = [
    { include = "pydll78", from = "src" },
 
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
asyncio = "^3.4.3"
log78 =  "2.1.2"
upinfopy = "^0.1.23"
configobj = "^5.0.9"
requests = "^2.32.3"
aiokafka = "^0.12.0"




[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24.0"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "aicenter.main:main"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "primary"



[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"


